Unit Tests toegevoegd en foutsjes weggewerkt